welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:13: error: '(' expected but identifier found.
    }while !(compteur==0)}
           ^